fix: Remove Z-Index Requirement for Listing Tags (#30)

--- a/src/blocks/ImageCard.scss
+++ b/src/blocks/ImageCard.scss
@@ -118,7 +118,7 @@
   align-items: center;
   justify-content: var(--tags-justify);
   position: absolute;
-  z-index: 10;
+  top: 0;
   width: 100%;
   margin-block-start: var(--bloom-s1);
   padding-inline: var(--bloom-s4);
